# cauldronos

./: .dockerignore  .env.example  Dockerfile  MONOREPO_MIGRATION.md  PNPM_CONVERSION_SUMMARY.md  PNPM_USAGE.md  README.md  REFACTORING.md  component-map.md  convert-to-pnpm.ps1  convert-to-pnpm.sh  design-system.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  production-readiness.md  tsconfig.json  turbo.json  usage-guide.md
apps/: .augment-guidelines  1  README.md  layout.tsx  package.json  page.tsx  pnpm-lock.yaml  schema.prisma  setup.cfg
apps/admin-dashboard/: .umirc.ssr.ts  .umirc.ts  package.json  server.ts  tailwind.config.js
apps/admin-dashboard/src/: access.ts  app.tsx
apps/cauldron-core/: .eslintrc.js  2  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  terminal  vite.config.ts
apps/cauldron-core/bots/: api_bridge.py
apps/cauldron-core/docs/: ai-sdk-doc.md  brand-hierarchy.md  plugin-api-reference.md
apps/cauldron-core/src/: app.tsx
apps/cauldron-core/swarm/: types.py
apps/client-portal/: package.json
apps/client-portal/src/: app.tsx
apps/core-app/: CHANGELOG.txt  pnpm-lock.yaml
apps/core-app/styles/: ThemeToggle.tsx
apps/docs/: plugin-system.md  style-brand-guidelines.md
apps/modules/: README.md
apps/modules/crm/: README.md  manifest.json  package.json  tsconfig.json
apps/platform/: README.md
apps/platform/admin-dashboard/: package.json  tsconfig.json
apps/src/: global.less
apps/store/: sidebarStore.ts
apps/styles/: ThemeProvider.tsx
apps/themes/: README.md
apps/tools/: README.md
(+668 files in other folders)
